trying to fix vertical alignment. -VL

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h4 {
     height:             79%;
     width:              90%;
     margin:             auto;
+    vertical-align:     middle;
 }
 
 .button {
@@ -61,7 +62,6 @@ h4 {
     text-align:         center;
     border-radius:      2em;
     border:             gold 0.2em solid;
-    vertical-align:     middle;
 }
 
 .green {
@@ -69,6 +69,7 @@ h4 {
 }
 
 .operator {
+    position:       relative;
     height:             98%;
     width:              98%;
     background-color:   red;
@@ -80,5 +81,8 @@ h4 {
 }
 
 h1, h2, h3 {
-    vertical-align:     middle;
+    position:   absolute;
+    -ms-transform:  translate(1em, 2em);
+    -webkit-transform:  translate(1em, 2em);
+    transform:      translate(1em, 2em);
 }
